kubernetes/kubespray/netchecker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netchecker-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: netchecker.example.com
      http:
        paths:
          - backend:
              serviceName: netchecker-service
              servicePort: 8081
